2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/test_component_video_converter.py:
	Skip video-converter tests if the version of the 'deinterlace' element
	is too old and doesn't have the method property.

2010-07-07  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/test/Makefile.am:
	* flumotion/test/test_component_video_converter.py (added):
	Simple tests for video-converter and effects.

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/converters/video/video.py:
	Use the the public member effectBin, instead of the method call which
	was finally removed.

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Pepe Ribas

	* flumotion/component/producers/firewire/wizard_gtk.py:
	Display the real output width which is different from the 'width'
	argument passed to the scaller

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Pepe Ribas

	* flumotion/component/producers/firewire/wizard_gtk.py:
	Don't update the scale correction when one of the options is toggled,
	only if 'height' or 'is-square' changed.
	Closes #1442

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/effects/videorate (svn:ignore):
	* flumotion/component/effects/deinterlace (svn:ignore):
	* flumotion/component/converters/video (svn:ignore):
	* flumotion/component/effects/videoscale (svn:ignore):
	Add missing files to svn:ignore

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/effects/videorate/videorate.py:
	Use 2 parameters in gst.Fraction to be compatible with older versions

2010-07-02  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc-Andre Lureau

	* flumotion/admin/gtk/overlaystep.py:
	* flumotion/component/converters/overlay/overlay.py:
	* flumotion/component/converters/overlay/overlay.xml:
	overlay: add suport for dynamic changes using the input stream
	caps.
